--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-196.5KB/s(Youtube:不良林), server: 36.156.219.92, port: 10189, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇨🇳 中国-328.1KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇬🇧 英国-495.0KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-603.3KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇺🇸 美国-208.7KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.36MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.96MB/s(Youtube:不良林), server: 36.156.219.92, port: 10199, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-328.1KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-448.6KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-209.4KB/s(Youtube:不良林), server: 213.183.59.214, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-204.6KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-196.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-603.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-279.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-208.7KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-328.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-490.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-448.6KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-204.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
